# terraphim_cloud_openapi

./: .env  .gitignore  Cargo.toml  README.md  compile_start.sh
.cargo/: config.toml
config/: default.toml  desktop_config.json
crates/terraphim_pipeline/: Cargo.toml
crates/terraphim_pipeline/benches/: pipeline_benchmark.rs
crates/terraphim_pipeline/src/: lib.rs  main.rs
src/: graph_search.rs  main.rs  mod.rs  settings.rs  utils.rs
src/graph_search/: graph_types.rs
src/scratchpad/: graph_edge.rs  main_not_working.rs  main_works.rs
test-data/: article.json  attacking_ml.json  org_project.json  ref_arch.json  term_to_id.json
