[package]
name = "terraphim_pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.8.3"
unicode-segmentation = "1.10.1"
memoize = "0.4.0"
ahash = {version="0.8.3", features=["serde"]}
terraphim_automata = { path="../terraphim_automata"}
itertools="0.10.5"
